# distill-strip-ansi

./: .clippy.toml  .deny.toml  .gitignore  .mise.toml  .yamllint  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mock-tag.json  prod.yml  rust.yml
benches/: internals.rs  internals_iai.rs  strip_benchmark.rs
benches/ecosystem/: Cargo.toml
benches/ecosystem/benches/: console_bench.rs  console_iai.rs  distill.rs  distill_iai.rs  fast_strip.rs  fast_strip_iai.rs  strip_escapes.rs  strip_escapes_iai.rs
benches/harness/: Cargo.toml
benches/harness/src/: cache.rs  config.rs  iai_inputs.rs  inputs.rs  lib.rs  resources.rs  runner.rs
doc/: ANSI-REFERENCE.md  BENCHMARKS-REPRODUCE.md  BENCHMARKS-REPRODUCE.md.in  BENCHMARKS.2019.MBP.i7-9750H.md  BENCHMARKS.md  BENCHMARKS.md.in  COLOR-TRANSFORMS.md  CONTRIBUTING.md  CVE-MITIGATION.md  DESIGN.md  DEVELOPMENT.md  ECOSYSTEM.md  LIBRARY-USAGE.md  PRESETS.md  SECURITY.md  UNICODE-NORMALIZATION.md  threat-db.toml
etc/target-cpu-notes/: alderlake.md  apple-m1.md  apple-m3.md  default.md  native.md  sapphirerapids.md  x86-64-v2.md  x86-64-v3.md  x86-64-v4.md  x86-64.md  znver3.md  znver4.md
etc/unicode-mappings/: arabic-presentation-forms.toml  cjk-compat-ideographs-supplement.toml  cjk-compat-ideographs.toml  cjk-compatibility.toml  enclosed-alphanumeric-supplement.toml  enclosed-alphanumerics.toml  enclosed-cjk.toml  halfwidth-hangul.toml  halfwidth-katakana.toml  math-greek.toml  math-latin.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_stream.rs  fuzz_strip.rs  fuzz_strip_in_place.rs
src/: classifier.rs  classify_tables.rs  cli.rs  detect.rs  distill_ansi_main.rs  downgrade.rs  filter.rs  io.rs  lib.rs  main.rs  palette.rs  parser.rs  preset.rs  sgr_rewrite.rs  state_table.rs  stats.rs  stream.rs  strip.rs  threat_db.rs  toml_config.rs  transform_stream.rs  unicode_map.rs  writer.rs
tests/: color_palette_tests.rs  cross_validate_console.rs  cross_validate_fast_strip.rs  cross_validate_strip_ansi_escapes.rs  distill_ansi_integration_tests.rs  downgrade_color_tests.rs  integration_tests.rs  parser_unit_tests.rs  preset_unit_tests.rs  property_classifier_tests.proptest-regressions  property_classifier_tests.rs  property_downgrade_tests.rs  property_filter_tests.proptest-regressions  property_filter_tests.rs  property_preset_tests.rs  property_tests.proptest-regressions  property_tests.rs  property_toml_tests.rs  property_unicode_map_tests.rs  snapshot_tests.rs  stream_property_tests.rs  stream_unit_tests.rs  strip_unit_tests.rs  test_strip_ansi_escapes.rs  transform_stream_tests.rs  unicode_map_toml_tests.rs  unicode_map_unit_tests.rs  unicode_normalize_integration_tests.rs  writer_unit_tests.rs
tests/fixtures/: ansi-mixed.expected.txt  ansi-mixed.raw.txt  ansi-sgr.expected.txt  ansi-sgr.raw.txt  apt-install.raw.txt  autoconf-configure.raw.txt  brew-upgrade.expected.txt  brew-upgrade.raw.txt  bun-install.raw.txt  bundler-install.raw.txt  cargo-binstall.raw.txt  cargo-test.expected.txt  cargo-test.raw.txt  cmake-build.raw.txt  docker-bake-live.raw.txt  docker-build-live.raw.txt  docker-build.expected.txt  docker-build.raw.txt  docker-compose-live.raw.txt  docker-compose.expected.txt  docker-compose.raw.txt  gcc-clang-diag.raw.txt  http-threats.raw.txt  make-build.raw.txt  mise-install.raw.txt  nginx-error.raw.txt  ninja-build.raw.txt  npm-install.raw.txt  pacman-install.raw.txt  pip-install.raw.txt  plain-text.raw.txt  postgres-log.raw.txt  rustc-diag.raw.txt  rustup-install.raw.txt  smtp-threats.raw.txt  threat-fixtures.map.txt  unicode-normalize.expected.txt  unicode-normalize.raw.txt  uv-install.raw.txt
tests/snapshots/: snapshot_tests__snapshot_256_color_output.snap  snapshot_tests__snapshot_cargo_error_output.snap  snapshot_tests__snapshot_cargo_test_output.snap  snapshot_tests__snapshot_docker_build_output.snap  snapshot_tests__snapshot_osc8_hyperlinks.snap  snapshot_tests__snapshot_streaming_cargo_output.snap  snapshot_tests__snapshot_window_title_sequences.snap
