[package]
name = "distill-strip-ansi"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/belt/distill"
description = "Strip ANSI escape sequences from byte streams"
keywords = ["ansi", "terminal", "escape-sequences", "strip", "cli"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["fuzz/", "tests/fixtures/*.txt", "benches/"]

[lib]
name = "strip_ansi"

[[bin]]
name = "strip-ansi"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["std", "cli", "filter"]
std = []
filter = ["dep:smallvec"]
cli = ["std", "dep:clap", "dep:sigpipe"]
toml-config = ["filter", "std", "dep:serde", "dep:toml", "dep:thiserror"]

[dependencies]
memchr = { version = "2.7" }
smallvec = { version = "1.13", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
sigpipe = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
thiserror = { version = "2.0", optional = true }

[dev-dependencies]
proptest = { version = "1.6" }
assert_cmd = { version = "2.0" }
insta = { version = "1.41" }
criterion = { version = "0.5", features = ["html_reports"] }
strip-ansi-escapes = "0.2"
console = { version = "0.15" }
tempfile = "3.27.0"

[[bench]]
name = "strip_benchmark"
harness = false
