[package]
name = "distill-bench-harness"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
strip-ansi = { package = "distill-strip-ansi", path = "../..", features = ["filter"] }
